# shopping-list-rs

./: .env  Cargo.toml  http-client.env.json  shopping-list.http
src/: main.rs
src/models/: shopping_list.rs
src/services/: list_item_service.rs  mod.rs  shopping_list_service.rs
src/utils/: responders.rs
