[package]
name = "shopping-list"
version = "0.1.0"
authors = ["Nebojsa Jakovljevic <nebojsa@nebjak.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
nanoid = "0.4.0"
serde = "1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.mongodb]
version = "1.2.1"
default-features = false
features = ["tokio-runtime"]
